fix(text): fix z-index problem

--- a/components/projects/project-card.module.scss
+++ b/components/projects/project-card.module.scss
@@ -14,6 +14,7 @@ $margins: 1rem/2;
     flex-grow: 1;
     width: 20%;
     font-size: 1.4rem;
+    z-index: 5;
 
     > span:nth-child(2) {
       font-size: 0.9rem;
